ndb - bug#41751 - handle binlog purge during startup by temporarily created THD object (yuck)